--- a/public/css/layoutsite.css
+++ b/public/css/layoutsite.css
@@ -4,6 +4,11 @@
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0);
 }
 
+img.menulogomovil{
+  height:60px;
+  margin-top: -32px
+}
+
 img.menulogo{
   height:60px;
   margin-top:12px;
@@ -12,6 +17,7 @@ img.menulogo{
 img.menupe{
   height:40px;
   margin-top:10px;
+  margin-left:50px;
 }
 
 nav#topnav{
@@ -29,6 +35,25 @@ nav#topnav i{
   z-index: 4;
 }
 
+nav#topnavmovil{
+  background-color: #f3357f;
+}
+
+nav#topnavmovil li,nav#topnavmovil a{
+  line-height: 40px;
+  height: 40px;
+}
+
+nav#topnavmovil a{
+  padding: 0 5px;
+  margin-left: 15px;
+}
+nav#topnavmovil i{
+  line-height: 45px;
+  height: 40px;
+  z-index: 4;
+}
+
 nav#undernav{
   background-color: #fff;
   height: 84px;
@@ -38,6 +63,10 @@ nav#undernav a{
   color:#f3357f;
 }
 
+nav#undernav-movil{
+  background-color: #fff;
+  height: 84px;
+}
 
 .lh84{
   line-height: 84px !important;
@@ -50,7 +79,22 @@ nav#undernav a{
   letter-spacing: 0px;
 }
 
-
-footer{
+.page-footer{
   background-color: #f3357f;
+  padding-top: 0px;
+}
+
+
+.socialfooter {
+   padding: 10px;
+   padding-top: 13px;
+   font-size: 20px;
+   width: 40px;
+   height: 40px;
+   text-align: center;
+   text-decoration: none;
+   margin: 5px;
+   border-radius: 50%;
+   color: #f3357f;
+   background-color: white;
 }
