--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,57 @@
+
+
+.bottom-fixed{
+position: absolute;
+width: 100%;
+bottom: 10px;
+}
+
+.slick-next{
+  right: 30px;
+  z-index: 99;
+}
+
+.slick-prev{
+  left: 30px;
+  z-index: 99;
+}
+
+#slider .slick-prev:before,
+#slider .slick-next:before
+{
+    color: #fff;
+}
+
+#courses .slick-prev{
+  left: -30px !important;
+
+}
+#courses .slick-next{
+  right: -30px !important;
+}
+
+.slick-dots li button:before
+{
+    font-size: 16px;
+    line-height: 20px;
+
+    width: 20px;
+    height: 20px;
+
+    opacity: .35;
+    color: white;
+}
+.slick-dots li.slick-active button:before
+{
+    opacity: 1;
+    color: white;
+}
+
+.slick-dotted.slick-slider{
+  margin-bottom: 0px;
+
+}
+
 .nobottom{
   margin-bottom: 0;
 }
@@ -28,7 +82,19 @@
    color: white;
 }
 
-/* background-color */
+.socialcourse {
+   padding: 5px;
+   font-size: 15px;
+   width: 25px;
+   height: 25px;
+   text-align: center;
+   text-decoration: none;
+   margin: 5px 5px;
+   border-radius: 50%;
+   background-color: #f3357f;
+   color: white;
+}
+
 
 .input-field input[type=text], .input-field input[type=email]{
   background-color: white;
