--- a/public/css/home.css
+++ b/public/css/home.css
@@ -86,6 +86,10 @@ left:0px;
 
 }
 
+.notop{
+  margin-top: 0;
+}
+
 .nobottom{
   margin-bottom: 0;
 }
@@ -132,6 +136,7 @@ left:0px;
 .input-field input[type=text], .input-field input[type=email]{
   background-color: white;
   margin: 0 0 -10px 0;
+  height: 50px;
 }
 
 #contactform .row .col{
@@ -139,7 +144,7 @@ left:0px;
 }
 
 #contactform .row .col .but{
-  padding: 0px 5px;
+  padding: 0px 0px 0px 5px;
 }
 
 #contactsection p{
