--- a/public/css/layoutsite.css
+++ b/public/css/layoutsite.css
@@ -1,3 +1,12 @@
+*{
+  font-family: Nunito;
+}
+
+h1,h2,h3,h4,h5,h6{
+  font-family: Nunito;
+}
+
+
 .z-depth-0 {
   -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
   -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
