--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -14,21 +14,21 @@
 }
 
 
-@media only screen and (min-device-width: 1024px){
+@media only screen and (min-width: 1024px){
   #blog {
     margin:10px 10px;
   }
 
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1023px) {
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
   #blog {
     margin:10px 10px;
   }
 
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 767px) {
+@media only screen and (min-width : 320px) and (max-width : 767px) {
   #blog {
     margin:10px 10px;
   }
